--- a/theme/sections/outdated-browser.liquid
+++ b/theme/sections/outdated-browser.liquid
@@ -10,21 +10,34 @@
     #outdated{
         display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; width: 100%; height: 100%;
         text-align: center; text-transform: uppercase; z-index:1500;
-        background-color: #fff; color: #000;
+        background-color: #fff; background-color: rgba(0,0,0,0.8); color: #000;
     }
     * html #outdated{position: absolute;}
     #outdated h6{font-size: 25px; line-height: 25px; margin: 30px 0 10px;}
-    #outdated p{font-size: 12px; line-height: 12px; margin: 0;}
+    #outdated p{font-size: 12px; margin: 0;}
     #outdated #btnUpdateBrowser{
         display: block; position: relative; padding: 10px 20px; margin: 30px auto 0; width: 230px; /*need for IE*/
         color: #000; text-decoration: none; border: 2px solid #000; cursor: pointer;
     }
-    #outdated #btnUpdateBrowser:hover{color: #f25648; background-color:#ffffff;}
     #outdated .last{position: absolute; top: 10px; right: 25px; width: 20px; height: 20px;}
     #outdated .last[dir='rtl']{right: auto !important; left: 25px !important;}
     #outdated #btnCloseUpdateBrowser{
         display: block; position: relative; width: 100%; height: 100%;
         text-decoration: none; color: #ffffff; font-size: 36px; line-height: 36px;
+    }
+    #outdated .outdated-modal {
+        background-color: #ffffff;
+        max-width: 510px;
+        margin: auto;
+        padding: 50px;
+        margin-top: 30vh;
+    }
+
+    html.browser-ie .d-browser-ie-block {
+        display: block !important;
+    }
+    html.browser-ie .d-browser-ie-none {
+        display: none !important;
     }
     </style>
 
@@ -38,234 +51,151 @@
     -----------------------------------------------------------------------*/
     var outdatedBrowser = function(options) {
 
-    //Variable definition (before ajax)
-    var outdated = document.getElementById("outdated");
+        //Variable definition (before ajax)
+        var outdated = document.getElementById("outdated");
 
-    // Default settings
-    this.defaultOpts = {
-        bgColor: '#f25648',
-        color: '#ffffff',
-        lowerThan: 'transform',
-        languagePath: '../outdatedbrowser/lang/en.html'
-    }
-
-    if (options) {
-        //assign css3 property or js property to IE browser version
-        if (options.lowerThan == 'IE8' || options.lowerThan == 'borderSpacing') {
-            options.lowerThan = 'borderSpacing';
-        } else if (options.lowerThan == 'IE9' || options.lowerThan == 'boxShadow') {
-            options.lowerThan = 'boxShadow';
-        } else if (options.lowerThan == 'IE10' || options.lowerThan == 'transform' || options.lowerThan == '' || typeof options.lowerThan === "undefined") {
-            options.lowerThan = 'transform';
-        } else if (options.lowerThan == 'IE11' || options.lowerThan == 'borderImage') {
-            options.lowerThan = 'borderImage';
-        }  else if (options.lowerThan == 'Edge' || options.lowerThan == 'js:Promise') {
-            options.lowerThan = 'js:Promise';
+        // Default settings
+        this.defaultOpts = {
+            bgColor: '#f25648',
+            color: '#ffffff',
+            lowerThan: 'transform',
+            languagePath: '../outdatedbrowser/lang/en.html'
         }
 
-        //all properties
-        this.defaultOpts.bgColor = options.bgColor;
-        this.defaultOpts.color = options.color;
-        this.defaultOpts.lowerThan = options.lowerThan;
-        this.defaultOpts.languagePath = options.languagePath;
+        if (options) {
+            //assign css3 property or js property to IE browser version
+            if (options.lowerThan == 'IE8' || options.lowerThan == 'borderSpacing') {
+                options.lowerThan = 'borderSpacing';
+            } else if (options.lowerThan == 'IE9' || options.lowerThan == 'boxShadow') {
+                options.lowerThan = 'boxShadow';
+            } else if (options.lowerThan == 'IE10' || options.lowerThan == 'transform' || options.lowerThan == '' || typeof options.lowerThan === "undefined") {
+                options.lowerThan = 'transform';
+            } else if (options.lowerThan == 'IE11' || options.lowerThan == 'borderImage') {
+                options.lowerThan = 'borderImage';
+            } else if (options.lowerThan == 'IE11' || options.lowerThan == 'borderImage') {
+                options.lowerThan = 'objectFit';
+            }  else if (options.lowerThan == 'Edge' || options.lowerThan == 'js:Promise') {
+                options.lowerThan = 'js:Promise';
+            }
 
-        bkgColor = this.defaultOpts.bgColor;
-        txtColor = this.defaultOpts.color;
-        cssProp = this.defaultOpts.lowerThan;
-        languagePath = this.defaultOpts.languagePath;
-    } else {
-        bkgColor = this.defaultOpts.bgColor;
-        txtColor = this.defaultOpts.color;
-        cssProp = this.defaultOpts.lowerThan;
-        languagePath = this.defaultOpts.languagePath;
-    } //end if options
+            //all properties
+            this.defaultOpts.bgColor = options.bgColor;
+            this.defaultOpts.color = options.color;
+            this.defaultOpts.lowerThan = options.lowerThan;
+            this.defaultOpts.languagePath = options.languagePath;
+
+            bkgColor = this.defaultOpts.bgColor;
+            txtColor = this.defaultOpts.color;
+            cssProp = this.defaultOpts.lowerThan;
+            languagePath = this.defaultOpts.languagePath;
+        } else {
+            bkgColor = this.defaultOpts.bgColor;
+            txtColor = this.defaultOpts.color;
+            cssProp = this.defaultOpts.lowerThan;
+            languagePath = this.defaultOpts.languagePath;
+        } //end if options
 
 
-    //Define opacity and fadeIn/fadeOut functions
-    var done = true;
+        //Define opacity and fadeIn/fadeOut functions
+        var done = true;
 
-    function function_opacity(opacity_value) {
-        outdated.style.opacity = opacity_value / 100;
-        outdated.style.filter = 'alpha(opacity=' + opacity_value + ')';
-    }
-
-    // function function_fade_out(opacity_value) {
-    //     function_opacity(opacity_value);
-    //     if (opacity_value == 1) {
-    //         outdated.style.display = 'none';
-    //         done = true;
-    //     }
-    // }
-
-    function function_fade_in(opacity_value) {
-        function_opacity(opacity_value);
-        if (opacity_value == 1) {
-            outdated.style.display = 'block';
+        function function_opacity(opacity_value) {
+            outdated.style.opacity = opacity_value / 100;
+            outdated.style.filter = 'alpha(opacity=' + opacity_value + ')';
         }
-        if (opacity_value == 100) {
-            done = true;
+
+        // function function_fade_out(opacity_value) {
+        //     function_opacity(opacity_value);
+        //     if (opacity_value == 1) {
+        //         outdated.style.display = 'none';
+        //         done = true;
+        //     }
+        // }
+
+        function function_fade_in(opacity_value) {
+            function_opacity(opacity_value);
+            if (opacity_value == 1) {
+                outdated.style.display = 'block';
+            }
+            if (opacity_value == 100) {
+                done = true;
+            }
         }
-    }
 
-    //check if element has a particular class
-    // function hasClass(element, cls) {
-    //     return (' ' + element.className + ' ').indexOf(' ' + cls + ' ') > -1;
-    // }
+        //check if element has a particular class
+        // function hasClass(element, cls) {
+        //     return (' ' + element.className + ' ').indexOf(' ' + cls + ' ') > -1;
+        // }
 
-    var supports = ( function() {
-        var div = document.createElement('div');
-        var vendors = 'Khtml Ms O Moz Webkit'.split(' ');
-        var len = vendors.length;
+        var supports = ( function() {
+            var div = document.createElement('div');
+            var vendors = 'Khtml Ms O Moz Webkit'.split(' ');
+            var len = vendors.length;
 
-        return function(prop) {
-            if (prop in div.style) return true;
+            return function(prop) {
+                if (prop in div.style) return true;
 
-            prop = prop.replace(/^[a-z]/, function(val) {
-                return val.toUpperCase();
-            });
+                prop = prop.replace(/^[a-z]/, function(val) {
+                    return val.toUpperCase();
+                });
 
-            while (len--) {
-                if (vendors[len] + prop in div.style) {
-                    return true;
+                while (len--) {
+                    if (vendors[len] + prop in div.style) {
+                        return true;
+                    }
                 }
-            }
-            return false;
-        };
-    } )();
-
-    var validBrowser = false;
-
-    // browser check by js props
-    if(/^js:+/g.test(cssProp)) {
-        var jsProp = cssProp.split(':')[1];
-        if(!jsProp)
-            return;
-
-        switch (jsProp) {
-            case 'Promise':
-                validBrowser = window.Promise !== undefined && window.Promise !== null && Object.prototype.toString.call(window.Promise.resolve()) === '[object Promise]';
-                break;
-            default:
-                validBrowser = false;
-        }
-    } else {
-        // check by css3 property (transform=default)
-        validBrowser = supports('' + cssProp + '');
-    }
-
-
-    if (!validBrowser) {
-        if (done && outdated.style.opacity !== '1') {
-            done = false;
-            for (var i = 1; i <= 100; i++) {
-                setTimeout((function (x) {
-                    return function () {
-                        function_fade_in(x);
-                    };
-                })(i), i * 8);
-            }
-        }
-    } else {
-        return;
-    } //end if
-
-
-    //Check AJAX Options: if languagePath == '' > use no Ajax way, html is needed inside <div id="outdated">
-    if (languagePath === ' ' || languagePath.length == 0) {
-        startStylesAndEvents();
-    } else {
-        grabFile(languagePath);
-    }
-
-    //events and colors
-    function startStylesAndEvents() {
-        var btnClose = document.getElementById("btnCloseUpdateBrowser");
-        var btnUpdate = document.getElementById("btnUpdateBrowser");
-
-        //check settings attributes
-        outdated.style.backgroundColor = bkgColor;
-        //way too hard to put !important on IE6
-        outdated.style.color = txtColor;
-        outdated.children[0].style.color = txtColor;
-        outdated.children[1].style.color = txtColor;
-
-        //check settings attributes
-        btnUpdate.style.color = txtColor;
-        // btnUpdate.style.borderColor = txtColor;
-        if (btnUpdate.style.borderColor) {
-            btnUpdate.style.borderColor = txtColor;
-        }
-        btnClose.style.color = txtColor;
-
-        //close button
-        btnClose.onmousedown = function() {
-            outdated.style.display = 'none';
-            return false;
-        };
-
-        //Override the update button color to match the background color
-        btnUpdate.onmouseover = function() {
-            this.style.color = bkgColor;
-            this.style.backgroundColor = txtColor;
-        };
-        btnUpdate.onmouseout = function() {
-            this.style.color = txtColor;
-            this.style.backgroundColor = bkgColor;
-        };
-    } //end styles and events
-
-
-    // IF AJAX with request ERROR > insert english default
-    var ajaxEnglishDefault = '<h6>Your browser is out-of-date!</h6>'
-        + '<p>Update your browser to view this website correctly. <a id="btnUpdateBrowser" href="http://outdatedbrowser.com/">Update my browser now </a></p>'
-        + '<p class="last"><a href="#" id="btnCloseUpdateBrowser" title="Close">&times;</a></p>';
-
-
-    //** AJAX FUNCTIONS - Bulletproof Ajax by Jeremy Keith **
-    function getHTTPObject() {
-        var xhr = false;
-        if (window.XMLHttpRequest) {
-            xhr = new XMLHttpRequest();
-        } else if (window.ActiveXObject) {
-            try {
-                xhr = new ActiveXObject("Msxml2.XMLHTTP");
-            } catch ( e ) {
-                try {
-                    xhr = new ActiveXObject("Microsoft.XMLHTTP");
-                } catch ( e ) {
-                    xhr = false;
-                }
-            }
-        }
-        return xhr;
-    }//end function
-
-    function grabFile(file) {
-        var request = getHTTPObject();
-        if (request) {
-            request.onreadystatechange = function() {
-                displayResponse(request);
+                return false;
             };
-            request.open("GET", file, true);
-            request.send(null);
-        }
-        return false;
-    } //end grabFile
+        } )();
 
-    function displayResponse(request) {
-        var insertContentHere = document.getElementById("outdated");
-        if (request.readyState == 4) {
-            if (request.status == 200 || request.status == 304) {
-                insertContentHere.innerHTML = request.responseText;
-            } else {
-                insertContentHere.innerHTML = ajaxEnglishDefault;
+        var validBrowser = false;
+
+        // browser check by js props
+        if(/^js:+/g.test(cssProp)) {
+            var jsProp = cssProp.split(':')[1];
+            if(!jsProp)
+                return;
+
+            switch (jsProp) {
+                case 'Promise':
+                    validBrowser = window.Promise !== undefined && window.Promise !== null && Object.prototype.toString.call(window.Promise.resolve()) === '[object Promise]';
+                    break;
+                default:
+                    validBrowser = false;
             }
-            startStylesAndEvents();
+        } else {
+            // check by css3 property (transform=default)
+            validBrowser = supports('' + cssProp + '');
         }
-        return false;
-    }//end displayResponse
 
-    ////////END of outdatedBrowser function
+
+        if (!validBrowser) {
+            if (done && outdated.style.opacity !== '1') {
+                done = false;
+                for (var i = 1; i <= 100; i++) {
+                    setTimeout((function (x) {
+                        return function () {
+                            function_fade_in(x);
+                        };
+                    })(i), i * 8);
+                }
+            }
+        } else {
+            return;
+        } //end if
+
+
+        //events and colors
+        function startStylesAndEvents() {
+            var btnClose = document.getElementsByClassName("btnCloseUpdateBrowser");
+            //close button
+            btnClose.onmousedown = function() {
+                outdated.style.display = 'none';
+                return false;
+            };
+
+        }
+        startStylesAndEvents();
     };
 
     // Plain Javascript
@@ -283,12 +213,29 @@
             }
         }
     }
+
+    /**
+     * Test if the current borwser is IE
+     */
+    function isIE() {
+        return (navigator.appName == 'Microsoft Internet Explorer' ||  !!(navigator.userAgent.match(/Trident/) || navigator.userAgent.match(/rv:11/)) || (typeof $.browser !== "undefined" && $.browser.msie == 1));
+    }
+
+    function addBrowserClassToHtml() {
+        if(isIE()) {
+            var htmlElement = document.getElementsByTagName( 'html' )[0];
+            htmlElement.setAttribute( 'class', 'browser-ie' );
+        }
+    }
+
+
     //call plugin function after DOM ready
     addLoadEvent(function(){
+        addBrowserClassToHtml();
         outdatedBrowser({
-            bgColor: '#fff',
+            bgColor: 'rgba(0,0,0,0.8)',
             color: '#000',
-            lowerThan: 'js:Promise',
+            lowerThan: 'objectFit',
             languagePath: ''
         });
     });
@@ -296,15 +243,35 @@
     </script>
 
     <div id="outdated">
-        <div class="d-none d-en-block">
-            <h6>Your browser is out of date!</h6>
-            <p>Update your browser to view this website correctly. <a id="btnUpdateBrowser" href="http://outdatedbrowser.com/">Update my browser now </a></p>
-            <p class="last"><a href="#" id="btnCloseUpdateBrowser" title="Close">&times;</a></p>
-        </div>
-        <div class="d-none d-de-block">
-            <h6>Ihr Browser ist veraltet!</h6>
-            <p>Bitte aktualisieren Sie Ihren Browser, um diese Website korrekt darzustellen. <a id="btnUpdateBrowser" href="http://outdatedbrowser.com/de">Den Browser jetzt aktualisieren </a></p>
-            <p class="last"><a href="#" id="btnCloseUpdateBrowser" title="Schließen">&times;</a></p>
+        <div class="outdated-modal">
+            <div class="d-none d-en-block">
+                <h6 class="pb-3">Your browser is out of date!</h6>
+                <p class="d-browser-ie-none">Update your browser to view this webapp correctly.</p>
+                <p class="d-none d-browser-ie-block">
+                    You are using Microsoft Internet Explorer, which is no longer being developed by Microsoft.
+                    Upgrade to Microsoft Edge or another modern browser to view this webapp correctly.
+                </p>
+                <p class="pt-4">
+                    <a class="btnUpdateBrowser btn btn-animated-underline-dark font-weight-bold" href="http://outdatedbrowser.com/de">Update my browser now </a>
+                </p>
+                
+                {% comment %} <p class="last btnCloseUpdateBrowser"><a href="#" title="Close">&times;</a></p> {% endcomment %}
+            </div>
+            <div class="d-none d-de-block">
+                <h6 class="pb-3">Ihr Browser ist veraltet!</h6>
+                <p class="d-browser-ie-none">
+                    Bitte aktualisieren Sie Ihren Browser, um diese Webanwendung korrekt darzustellen.
+                </p>
+                <p class="d-none d-browser-ie-block">
+                    Sie verwenden den Microsoft Internet Explorer, dieser wird von Microsoft nicht mehr weiterentwickelt.
+                    Bitte aktualisieren Sie auf Microsoft Edge oder einen anderen zeitgemäßen Browser um diese Webanwendung korrekt darzustellen.
+                </p>
+                <p class="pt-4">
+                    <a class="btnUpdateBrowser btn btn-animated-underline-dark font-weight-bold" href="http://outdatedbrowser.com/de">Jetzt aktualisieren </a>
+                </p>
+
+                {% comment %} <p class="last btnCloseUpdateBrowser"><a href="#" title="Schließen">&times;</a></p> {% endcomment %}
+            </div>
         </div>
     </div>
 {% endif %}
