[Section] Outdated browser detection: Fix literal

--- a/theme/sections/outdated-browser.liquid
+++ b/theme/sections/outdated-browser.liquid
@@ -264,7 +264,7 @@
                 </p>
                 <p class="d-none d-browser-ie-block">
                     Sie verwenden den Microsoft Internet Explorer, dieser wird von Microsoft nicht mehr weiterentwickelt.
-                    Bitte aktualisieren Sie auf Microsoft Edge oder einen anderen zeitgemäßen Browser um diese Webanwendung korrekt darzustellen.
+                    Bitte aktualisieren Sie auf Microsoft Edge oder einen anderen zeitgemäßen Browser, um diese Webanwendung korrekt darzustellen.
                 </p>
                 <p class="pt-4">
                     <a class="btnUpdateBrowser btn btn-animated-underline-dark font-weight-bold" href="http://outdatedbrowser.com/de">Jetzt aktualisieren </a>
