--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -232,7 +232,7 @@
           {% assign deTabContentIndex = "de-tab-" | append: forloop.index | append: "-content" %}
           {% assign tabTitle = product.metafields["global"][tabTitleIndex] %}
           {% assign deTabTitle = product.metafields["global"][deTabTitleIndex] %}
-          {% assign tabContent = product.metafields["global"][TabContentIndex] %}
+          {% assign tabContent = product.metafields["global"][tabContentIndex] %}
           {% assign deTabContent = product.metafields["global"][deTabContentIndex] %}
           {% if tabTitle != blank %}
             <div
