--- a/theme/sections/instagram.liquid
+++ b/theme/sections/instagram.liquid
@@ -4,7 +4,7 @@
   limit="{{section.settings.limit}}"
   >
   <div class="row">
-    <div class="col-12 col-sm-4 px-0 content-box ratio-1-1" rv-each-image="media.data" rv-class="image.media_type" rv-data-url="image.permalink" rv-on-tap="onTap">
+    <div class="col-12 col-sm-4 px-0 content-box ratio-1-1" rv-each-image="media.data" rv-add-class="image.media_type" rv-data-url="image.permalink" rv-on-tap="onTap">
       {% comment %} IMAGE {% endcomment %}
       <img lazyload="auto" class="content" rv-if="image.media_type | eq 'IMAGE'" rv-src="image.media_url" rv-src="image.media_url" rv-alt="image.caption">
 
