--- a/theme/snippets/jumplink-product-collection-grid-item-col-ratio-3-4.liquid
+++ b/theme/snippets/jumplink-product-collection-grid-item-col-ratio-3-4.liquid
@@ -41,7 +41,7 @@
 
         <div class="row justify-content-around px-3 pb-4 option-group">
           <div class="col-auto px-0" rv-each-size="sizeOption.values">
-            <button class="btn btn-link btn-option option-size text-decoration-normal" rv-class="size | prepend 'option-size-'" rv-on-click="chooseOption | args self size option.position option.name"
+            <button class="btn btn-link btn-option option-size text-decoration-normal" rv-add-class="size | prepend 'option-size-'" rv-on-click="chooseOption | args self size option.position option.name"
               rv-text="size"
               rv-i18n-text="size | handleize | prepend 'products.options.'"
             ></button>
@@ -54,7 +54,7 @@
       <div class="col-12">
         <div class="row m-0">
           <div rv-each-color="colorOption.values" class="col-auto pl-0 pr-2 pb-4 cursor-pointer pointer-events-all" rv-on-click="chooseOption | args self color option.position option.name">
-            <div class="styleicon-circle option-color option-variant-color" rv-class="color | replace_first '#' '' | prepend 'option-color-'" rv-css-background-color="color" style="width: 16px; height: 16px;"></div>
+            <div class="styleicon-circle option-color option-variant-color" rv-add-class="color | replace-first '#' '' | prepend 'option-color-'" rv-css-background-color="color" style="width: 16px; height: 16px;"></div>
           </div>
           {% for i in (1..4) %}
             {% assign colorIndex = "product-link-" | append: forloop.index | append: "-color" %}
