--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -19,7 +19,7 @@
     {% endcomment %}
     <div class="ml-auto col-auto d-flex align-items-center">
       <shopify-linklist class="col-auto pointer-events-all small" rv-linklist="system.linklists.footer | json" vertical="false">
-        <nav class="nav" rv-class="linklist.handle" rv-class-nav-pills="pills" rv-class-flex-column="vertical" rv-class-flex-row="vertical | not">
+        <nav class="nav" rv-add-class="linklist.handle" rv-class-nav-pills="pills" rv-class-flex-column="vertical" rv-class-flex-row="vertical | not">
           <div class="nav-item" rv-each-link="linklist.links" >
             <a
               class="nav-link"
@@ -159,7 +159,7 @@
 <div class="fullscreen-menu pb-5" {% comment %} rv-on-click="assign | args 'fullscreenMenuOpen' false" {% endcomment %} rv-show="fullscreenMenuOpen">
   <div class="d-flex flex-column justify-content-start align-items-center text-center font-weight-bold scrollbar-y-auto py-5" style="max-height: 100%;">
     <shopify-linklist class="mt-5" id="toggle-menu" name="toggle-menu" vertical="true" pills="false">
-      <nav class="nav" rv-class="linklist.handle" rv-class-nav-pills="pills" rv-class-flex-column="vertical" rv-class-flex-row="vertical | not">
+      <nav class="nav" rv-add-class="linklist.handle" rv-class-nav-pills="pills" rv-class-flex-column="vertical" rv-class-flex-row="vertical | not">
         <div class="nav-item" rv-each-link="linklist.links">
           <a
             class="nav-link justify-content-center"
@@ -189,7 +189,7 @@
     </a> {% endcomment %}
 
     <shopify-linklist class="" rv-show="moreMenuOpen" id="toggle-menu-more" name="toggle-menu-more" vertical="true" pills="false">
-      <nav class="nav" rv-class="linklist.handle" rv-class-nav-pills="pills" rv-class-flex-column="vertical" rv-class-flex-row="vertical | not">
+      <nav class="nav" rv-add-class="linklist.handle" rv-class-nav-pills="pills" rv-class-flex-column="vertical" rv-class-flex-row="vertical | not">
         <div class="nav-item" rv-each-link="linklist.links">
           <a
             class="nav-link justify-content-center"
